--- a/src/styles/Main.css
+++ b/src/styles/Main.css
@@ -2,4 +2,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+}
+.main_container .main_box {
+  height: 120vh;
 }/*# sourceMappingURL=Main.css.map */
