--- a/src/styles/components/common/NavBar.scss
+++ b/src/styles/components/common/NavBar.scss
@@ -9,12 +9,20 @@
     align-items: center;
     justify-content: space-between;
     a {
+      display: block;
       width: 10em;
       height: 2.2em;
       background: none;
       padding: 0.3rem 0.5rem;
       font-weight: 600;
       text-align: center;
+    }
+    .navBar_logo {
+      height: 4em;
+      background: url(/public/images/메인로고.png);
+      background-repeat: no-repeat;
+      background-position: center;
+      background-size: contain;
     }
   }
 }
