#1 refactor. file structure changing

--- a/src/styles/pages/BoardPage.css
+++ b/src/styles/pages/BoardPage.css
@@ -9,4 +9,4 @@
 }
 .board_container .board_box .article div {
   border: 1px solid blueviolet;
-}/*# sourceMappingURL=Board.css.map */
+}/*# sourceMappingURL=BoardPage.css.map */
