--- a/src/styles/pages/LoginPage.css
+++ b/src/styles/pages/LoginPage.css
@@ -50,4 +50,4 @@
   color: dodgerblue;
   box-sizing: border-box;
   font-weight: 400;
-}/*# sourceMappingURL=Login.css.map */
+}/*# sourceMappingURL=LoginPage.css.map */
