--- a/src/styles/pages/WriteArticlePage.css
+++ b/src/styles/pages/WriteArticlePage.css
@@ -3,7 +3,8 @@
   height: 80%;
   display: flex;
   flex-direction: column;
+  align-items: center;
 }
 .form_container form {
-  margin-top: 20em;
+  margin-top: 10em;
 }/*# sourceMappingURL=WriteArticlePage.css.map */
