--- a/src/styles/pages/WriteArticlePage.scss
+++ b/src/styles/pages/WriteArticlePage.scss
@@ -3,8 +3,9 @@
   height: 80%;
   display: flex;
   flex-direction: column;
+  align-items: center;
   form {
-    margin-top: 20em;
+    margin-top: 10em;
     .form_title {
     }
     .form_content {
