--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,9 @@
 .App {
   width: 100%;
   height: 100vh;
+  display: grid;
+  grid-template-columns: 25% 50% 25%;
+  justify-content: center;
   align-items: center;
+  margin-top: 4em;
 }
