--- a/src/styles/components/board/ArticleItem.css
+++ b/src/styles/components/board/ArticleItem.css
@@ -1,6 +1,7 @@
 .articleItem {
   width: 100%;
-  height: 2em;
-  border: 1px solid white;
+  height: 2.5em;
+  border-bottom: 1px solid black;
+  line-height: 2.5em;
   display: flex;
 }/*# sourceMappingURL=ArticleItem.css.map */
