--- a/src/styles/components/common/NavBar.css
+++ b/src/styles/components/common/NavBar.css
@@ -1,13 +1,14 @@
 @charset "UTF-8";
 .navBar_container {
-  position: fixed;
+  position: absolute;
+  top: 0;
   width: 100%;
   height: 4em;
 }
 .navBar_container .navBar_box {
   width: 100%;
   height: inherit;
-  background-color: #f8f8f8;
+  background-color: #c5c5fa;
   align-items: center;
   justify-content: space-between;
 }
