--- a/src/styles/pages/BoardPage.css
+++ b/src/styles/pages/BoardPage.css
@@ -1,24 +1,28 @@
 .board_container {
   width: 100%;
   height: 100%;
-  align-items: center;
-}
-.board_container .board_box {
   display: flex;
   flex-direction: column;
-  width: 80%;
-  max-width: 1000px;
-  height: -moz-fit-content;
-  height: fit-content;
   align-items: end;
-  padding: 1em 2em;
-  border-top: 1px solid black;
-  border-bottom: 1px solid black;
-  color: white;
+  padding-top: 5em;
 }
-.board_container .board_box .to_writeBtn {
+.board_container .to_writeBtn {
   width: 5em;
   height: -moz-fit-content;
   height: fit-content;
   border: 1px solid black;
+  margin: 0.6em 0;
+}
+.board_container .board_box {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  max-width: 1000px;
+  height: -moz-fit-content;
+  height: fit-content;
+  align-items: end;
+  padding: 0 2em;
+  padding-bottom: 1em;
+  border-top: 1px solid black;
+  border-bottom: 1px solid black;
 }/*# sourceMappingURL=BoardPage.css.map */
