--- a/src/styles/pages/BoardPage.scss
+++ b/src/styles/pages/BoardPage.scss
@@ -1,22 +1,27 @@
 .board_container {
   width: 100%;
   height: 100%;
-  align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: end;
+  padding-top: 5em;
+  .to_writeBtn {
+    width: 5em;
+    height: fit-content;
+    border: 1px solid black;
+    margin: 0.6em 0;
+  }
+
   .board_box {
     display: flex;
     flex-direction: column;
-    width: 80%;
+    width: 100%;
     max-width: 1000px;
     height: fit-content;
     align-items: end;
-    padding: 1em 2em;
+    padding: 0 2em;
+    padding-bottom: 1em;
     border-top: 1px solid black;
     border-bottom: 1px solid black;
-    color: white;
-    .to_writeBtn {
-      width: 5em;
-      height: fit-content;
-      border: 1px solid black;
-    }
   }
 }
