--- a/src/styles/pages/WriteArticlePage.scss
+++ b/src/styles/pages/WriteArticlePage.scss
@@ -1,14 +1,34 @@
 .form_container {
-  width: 80%;
-  height: 80%;
+  width: 100%;
+  height: 100%;
   display: flex;
   flex-direction: column;
+  justify-content: center;
   align-items: center;
   form {
-    margin-top: 10em;
+    padding: 2em 0;
+    width: 95%;
+    height: 70%;
+    border: 1px solid black;
     .form_title {
+      display: flex;
+      justify-content: start;
+      width: 90%;
+      input {
+        width: 90%;
+        height: 1.5em;
+        border: 1px solid black;
+      }
     }
     .form_content {
+      display: flex;
+      justify-content: center;
+      width: 100%;
+      textarea {
+        width: 90%;
+        padding: 1em 1em;
+        border: 1px solid black;
+      }
     }
   }
 }
